Changed an if loop to object and added main tag

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,3 +20,13 @@ img {
     margin: auto;
 
 }
+
+h1 {
+    font-family: "Courgette", sans-serif;
+}
+
+h2,
+h3,
+div {
+    font-family: 'Times New Roman', Times, serif;
+}
