--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,19 @@
 body {
-    background: rgb(196 223 196);
+    background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
     text-align: center;
     width: 70%;
     margin: auto;
 }
 
+.text-box {
+    background-color:#dcfc8f;
+    border-radius: 14%;
+}
+
 img {
-    width: 80%;
+    width: 90%;
     padding: 20px;
+    border-radius: 15%;
 }
 
 .questions {
@@ -18,15 +24,49 @@ img {
 #form-box {
     padding: 5%;
     margin: auto;
+    background-color: #dcfc8f;
+    border-radius: 20%;
 
 }
 
 h1 {
     font-family: "Courgette", sans-serif;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 h2,
 h3,
 div {
     font-family: 'Times New Roman', Times, serif;
+}
+
+#button{
+    background-color: white;
+    margin-bottom: 0.75rem;
+    margin-right: 0.75rem;
+    padding: 0.25rem 1.5rem;
+    font-weight: 600;
+    border-radius: 9999px;
+}
+
+.results {
+    background-color: #dcfc8f;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    margin-bottom: 0.75rem;
+    margin-right: 0.75rem;
+    padding: 0.25rem 1.5rem;
+    font-weight: 600;
+    border-radius: 9999px;
+    border: 1px solid #85FFBD;
+}
+
+form {
+    margin-bottom: 1%;
+    font-weight: 600;
+}
+.info-box {
+    background-color: #dcfc8f;
+    border-radius: 14%;
 }
